# codefacts

./: .gitignore  Cargo.toml  README.md  UPSTREAM.md  deny.toml  server.json
.github/workflows/: ci.yml  release.yml
benchmarks/: queries.json
docs/: CODEMAPPER-COMPARISON.md  DISTRIBUTION.md  MINIMAL-IMPLEMENTATION-PLAN.md  PERFORMANCE.md
examples/: repository_metrics.rs
npm/: README.md  assets.json  checksums.json  package.json
npm/lib/: installer.js  launcher.js
npm/scripts/: check-release-version.mjs  stage-package.mjs
npm/test/: installer.test.mjs  launcher.test.mjs
queries/: c.scm  cpp.scm  rust.scm
src/: error.rs  lib.rs  lsp.rs  main.rs  mcp.rs  service.rs  types.rs
src/db/: converters.rs  mod.rs  schema.rs
src/graph/: mod.rs  store.rs
src/indexer/: endpoints.rs  extractor.rs  markdown.rs  mod.rs  parser.rs  pipeline.rs
src/resolution/: imports.rs  mod.rs
tests/: eval_fixture.rs  mcp_protocol.rs
