[package]
name = "codefacts"
version = "0.1.7"
edition = "2021"
authors = ["CodeFacts contributors"]
description = "Local, verifiable code facts for coding agents"
license = "MIT"
repository = "https://github.com/Guanzhw/codefacts"
keywords = ["mcp", "code-intelligence", "tree-sitter", "sqlite"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "codefacts"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "codefacts"
path = "src/main.rs"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Tree-sitter (native — no WASM, 32 languages: 15 original + 17 Phase 11)
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-kotlin-ng = "1"
tree-sitter-swift = "0.7"
# New languages (Phase 11) — 17 grammars, all verified tree-sitter 0.25 compatible
tree-sitter-bash = "0.23"
tree-sitter-scala = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-julia = "0.23"
tree-sitter-lua = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-clojure-orchard = "0.2"
tree-sitter-dart-orchard = "0.3"
tree-sitter-fortran = "0.5"
tree-sitter-groovy = "0.1"
tree-sitter-zig = "1.1"
tree-sitter-r = "1.2"
tree-sitter-verilog = "1.0"
tree-sitter-erlang = "0.14"
tree-sitter-elm = "5.9"
tree-sitter-powershell = "0.25"
tree-sitter-nix = "0.3"
# NOTE: tree-sitter-perl requires tree-sitter 0.26, skipped until upgrade

# Parallelism
rayon = "1"

# Utilities
sha2 = "0.10"
hex = "0.4"
ignore = "0.4"
streaming-iterator = "0.1.9"

[features]
default = []

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
test-case = "3.3"
# Used only by the development benchmark example to sample the benchmark
# process's resident memory. It is deliberately absent from release builds.
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
